--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 	<title> Door County Wildflowers </title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+	<!--
+[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script> <![endif]
+-->
 </head>
 <body>
 <div id="wrapper">
